--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -126,7 +126,7 @@
                 <div class="col-md-9">
                                                                             <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="https://xn--yfr044l4qfzsf.com/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank"><b>飞鸟加速</b></a>
+                                    <a href="javascript:;" class="js_to" data-url="https://138.2.82.216/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank"><b>飞鸟加速</b></a>
                                 </div>
                                 <div class="panel-body">
                                     
@@ -179,7 +179,7 @@
                                                                             </dl>
                                 </div>
                                 <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="https://xn--yfr044l4qfzsf.com/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank">点击查看</a>
+                                    <a href="javascript:;" class="js_to" data-url="https://138.2.82.216/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank">点击查看</a>
                                 </div>
                             </div>
                             <hr />
@@ -538,16 +538,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-7-13-free-subscribe-node.htm" title="7月13日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址">7月13日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-11-free-subscribe-node.htm" title="6月11日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址">6月11日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-28-node-share.htm" title="6月28日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址">6月28日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-16-free-high-speed-nodes.htm" title="6月16日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址">6月16日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-10-free-node-subscribe.htm" title="6月10日→21M/S|2025年最新免费节点Sockscap64订阅链接地址">6月10日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-12-free-node-subscribe-links.htm" title="6月12日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址">6月12日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-25-node-share.htm" title="6月25日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址">6月25日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-5-node-share.htm" title="7月5日→18.8M/S|2025年最新免费节点Sockscap64订阅链接地址">7月5日→18.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-11-free-node-subscribe-links.htm" title="7月11日→22.8M/S|2025年最新免费节点Sockscap64订阅链接地址">7月11日→22.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-22-free-subscribe-node.htm" title="6月22日→18M/S|2025年最新免费节点Sockscap64订阅链接地址">6月22日→18M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-14-free-node-subscribe-links.htm" title="6月14日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址">6月14日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-19-node-share.htm" title="7月19日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址">7月19日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-6-node-share-links.htm" title="7月6日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址">7月6日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-17-free-subscribe-node.htm" title="7月17日→19.9M/S|2025年最新免费节点Sockscap64订阅链接地址">7月17日→19.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-7-12-node-share.htm" title="7月12日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">7月12日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-15-free-node-subscribe-links.htm" title="6月15日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址">6月15日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-19-free-node-subscribe.htm" title="6月19日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址">6月19日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-7-node-share.htm" title="7月7日→19.9M/S|2025年最新免费节点Sockscap64订阅链接地址">7月7日→19.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-26-node-share.htm" title="6月26日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址">6月26日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -559,7 +559,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">11</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">17</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
